fix(property-picker): add visible property

--- a/src/property-picker/style/index.less
+++ b/src/property-picker/style/index.less
@@ -4,6 +4,7 @@
 @property-picker-prefix-cls: ~'@{component-prefix}-property-picker';
 
 .@{property-picker-prefix-cls}-detail {
+  min-height: 20px;
   &__name {
     margin: 0 0 24px;
     color: #1248e9;
